# rapi

./: .gitignore  LICENSE  README.md  feeds.example.yml  pyproject.toml
src/rapi/: __init__.py  config.py
src/rapi/model/: post.py  site.py
